# uniqslib

./: .gitignore  readme.txt
common_header/: debugfunc.h  jsoncpp_helper.h  mersenne_rand.cpp  mersenne_rand.h  platform.h  readme.txt  safecstringop.h
file_replace_str/: CMakeLists.txt  file_change_between.py  file_replace_line.go  file_replace_str.cpp  test_replace_line.txt  test_replace_line.txt.bk
ini_parser/: Scene.ini  Source.cpp  ini_parser.cpp  ini_parser.h  r.sh
libcommon/: regsig.cpp
libcurl/: http_requester.cpp  http_requester.h  http_requester_thread.cpp  http_requester_thread.h  log.h  m.sh  main.cpp
libcurl2/: common_def.hpp  http_request.cpp  http_request.hpp  http_request_thread.cpp  http_request_thread.hpp  libcurl2.vcxproj  libcurl2.vcxproj.filters  main.cpp
libevent_test/: build.sh  debugfunc.h  inc.h  main.c  platform.h  regsig.c  regsig.h  s.vcxproj  stringop.h
libevent_test/c/: build.sh  c.vcxproj  cmain.c
libevent_test/win_sln/: uniqs.sln
libfuncmap/: funcmap.h  main.cpp  r.sh
libobjectpool/: libobjectpool.vcxproj  libobjectpool.vcxproj.filters  testmain.cpp  uobject_allocator.h  uobjectpool.h
libposix/: UAutoLock.h  libfolder.cpp  libfolder.h  libposix.vcxproj  libposix.vcxproj.filters  r.sh  test.cpp  umutex.cpp  umutex.h
libtimer/: libtimer.sln  libtimer.vcxproj  libtimer.vcxproj.filters  m.sh  main.cpp  utimer.cpp  utimer.h  utimer_detail.cpp  utimer_detail.h  utimer_impl.cpp  utimer_impl.h
log4cpp/Log4CppHelper/: Log4CppHelper.sln  Log4CppHelper.vcxproj  Log4CppHelper.vcxproj.filters  log4cpp_helper.cpp  log4cpp_helper.h  main.cpp  stdafx.h
md5sum/: main.cpp  md5sum.sln  md5sum.vcxproj  readme.txt  umd5.cpp  umd5.h
projects/cmake/: ModuleCompileOptions.cmake  ModuleImport.cmake
projects/umkdir/: CMakeLists.txt  build.bat
projects/umkdir/src/: main.cpp
study/cmakehelloworld/: clean.sh
study/cmakehelloworld/t3/lib/: CMakeLists.txt  hello.c  hello.h
study/cmakehelloworld/t4/src/: CMakeLists.txt  localfunc.c  localfunc.h  main.c
test/cpp11rtti/: main.cpp  r.sh
test/hash_test/: hash_algo.cpp  hash_algo.h  main.cpp  murmurhash.h  r.sh
test/jsoncpp_test/: main.cpp  r.sh
test/redis-test/: r.sh  readme.txt  redis-test.c
test/somework/: read_dir.cpp  simple_crypt.cpp  simple_crypt.h
testdblib/: CMakeLists.txt  idus.cpp  idus.h  idus_simple.cpp  idus_simple.h  main.cpp  testdblib.vcxproj  testdblib.vcxproj.filters
threadsafe/: threadsafe.sln  threadsafe.vcxproj  threadsafe_queue.h  threadsafe_queue_test.cpp
yymmdd/: main.cpp
(+71 files in other folders)
